# garagem-django

./: db.sqlite3  pyproject.toml
app/: urls.py
config/: settings.py
core/: admin.py
core/migrations/: 0002_acessorio_categoria.py  0003_cor.py  0004_marca.py  0005_modelo.py  0006_remove_modelo_categoria_alter_modelo_marca_and_more.py  0007_veiculo.py
core/models/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
core/serializers/: __init__.py  modelo.py  veiculo.py
core/views/: __init__.py  modelo.py  veiculo.py
garagem/: admin.py  models.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_acessorio_cor_rename_categoria_modelo_veiculo.py
