[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[project]
name = "garagem"
version = "0.1.0"
description = ""
authors = [
    {name = "José Eduardo Kahl", email = "josekahl333@gmail.com"},
]
dependencies = [
    "django>=4.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
